--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
         </div>
         <div class="float-right">
           <ul class="inline-flex">
-            <li><a class="px-4 font-bold" title="Home" href="/">🛖</a></li>
+            <li><a class="px-4 font-bold" title="Home" href="https://www.instagram.com/ludepage/"><img class="socialicons" src="/img/icon-instagram.png" alt="Insta"/></a></li>
+            <li><a class="px-4 font-bold" title="Home" href="https://twitter.com/LuDePage"><img class="socialicons" src="/img/icon-twitter.png" alt="Tweet"/></a></li>
           </ul>
         </div>
       </div>
