--- a/index.html
+++ b/index.html
@@ -90,5 +90,14 @@
         </div>
       </div>
     </footer>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-DJ2ZRYBHMK"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-DJ2ZRYBHMK');
+    </script>
   </body>
 </html>
