fix vidoe poster and compress size
Signed-off-by: AbhishekKr <abhikumar163@gmail.com>

--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
                             loop
                             muted="true"
                             preload="auto"
-                            src="/media/poem-a-drinking-song.mp4"
+                            src="https://lude.page/media/poem-a-drinking-song.mp4"
                             width="540px"
                             height="960px"
-                            poster="/img/poster-poem-a-drinking-song.jpg"
+                            poster="https://lude.page/img/poster-poem-a-drinking-song.jpg"
                       ></video>
                 </div>
               </div>
