update bg image and video poster to use webp
Signed-off-by: AbhishekKr <abhikumar163@gmail.com>

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>LuDe</title>
     <meta charset="UTF-8">
@@ -64,7 +64,7 @@
                             src="https://lude.page/media/poem-a-drinking-song.mp4"
                             width="540px"
                             height="960px"
-                            poster="https://lude.page/img/poster-poem-a-drinking-song.jpg"
+                            poster="https://lude.page/img/poster-poem-a-drinking-song.webp"
                       ></video>
                 </div>
               </div>
