edit nav to make it narrow at Y
Signed-off-by: AbhishekKr <abhikumar163@gmail.com>

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <!-- Navbar (sit on top) -->
     <nav class="bg-gray-900">
-      <div class="container mx-auto px-6 py-2 flex justify-between items-center">
+      <div class="container mx-auto px-6 flex justify-between items-center">
         <div class="hidden lg:block float-left">
           <a class="font-bold hover:text-cyan-300 hover:border-teal-500" href="#">
             Luminous Decibels
