add reddit icon, change icons to webp
Signed-off-by: AbhishekKr <abhikumar163@gmail.com>

--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
         </div>
         <div class="float-right">
           <ul class="inline-flex">
-            <li><a class="px-4 font-bold" title="Home" href="https://www.instagram.com/ludepage/"><img class="socialicons" src="/img/icon-instagram.png" alt="Insta"/></a></li>
-            <li><a class="px-4 font-bold" title="Home" href="https://twitter.com/LuDePage"><img class="socialicons" src="/img/icon-twitter.png" alt="Tweet"/></a></li>
+            <li><a class="px-4 font-bold" title="@Instagram" href="https://www.instagram.com/ludepage/"><img class="socialicons" src="/img/icon-instagram.webp" alt="Insta"/></a></li>
+            <li><a class="px-4 font-bold" title="@Twitter" href="https://twitter.com/LuDePage"><img class="socialicons" src="/img/icon-twitter.webp" alt="Tweet"/></a></li>
+            <li><a class="px-4 font-bold" title="@Reddit" href="https://reddit.com/r/LuDePage"><img class="socialicons" src="/img/icon-reddit.webp" alt="Reddit"/></a></li>
           </ul>
         </div>
       </div>
