--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
             <p class="max-w-screen-md mx-auto text-center text-gray-500 md:text-lg">
               Luminous Decibels gives a picture to your words.
             </p>
-            <p class="text-center md:text-lg">
-              <b><a href="https://beta.lude.page">Try Beta, now!</a></b>
+            <p class="text-center md:text-lg tracking-wide text-sky-800 text-xl font-bold border-solid border-2 border-indigo-200 rounded-xl shadow-2xl bg-gradient-to-r from-pink-300 to-purple-50">
+            <a href="https://beta.lude.page">Try <span class="animate-pulse">FREE Beta</span>, now!</a>
             </p>
           </div>
 
